Header picture not showing up and nav bar issue
Work photo was not showing up because it was linked to my C drive instead of being linked to a regular PDF file. I also added some margin to the top of the nav bar because it was too close to the browser search bar.

--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,7 @@ img{
     display:flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 0.5em;
 }
 
 .nav__logo,
